Fix too long name problem

--- a/guesswhosaidthat.css
+++ b/guesswhosaidthat.css
@@ -126,7 +126,7 @@ button a, button a:hover {
 
 h4.quiz-answer {
   display: inline;
-  margin-left: 10px;
+  white-space: nowrap;
 }
 
 ul, .answer {
